improve product and authentication
